fix pause button not showing
do #ks-145 Completed

--- a/www/less/main/fonts/khan-icons.less
+++ b/www/less/main/fonts/khan-icons.less
@@ -63,7 +63,7 @@
 .icon-video-play:before {
 	content: "\e605";
 }
-.icon-video-stop:before {
+.icon-video-pause:before {
 	content: "\e61f";
 }
 .icon-content-previous:before {
